[package]
name = "fits-rs"
version = "0.3.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

description = "FITS encoder and decoder in Rust"
documentation = "http://fifth-postulate.nl/fits-rs/"
homepage = "https://github.com/fifth-postulate/fits-rs/wiki"
repository = "https://github.com/fifth-postulate/fits-rs"
readme = "README.md"
keywords = ["image", "FITS"]
categories = ["multimedia", "multimedia::images", "science"]
license = "MIT"

[badges]
travis-ci = { repository = "fifth-postulate / fits-rs", branch = "master" }

[dependencies]
nom = "^3.1"